@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+18-Jan-2004
+~~~~~~~~~~~
+Accept Mozilla's alternative to the standard text/uri-list target during
+drag-and-drop (Andrew Flegg).
+
 07-Jan-2004
 ~~~~~~~~~~~
 Bugfix: Icon shortcuts with out modifier keys didn't work if NumLock,
